# hour_sheet_cli_python

./: .gitignore  README.md  pyproject.toml  req.txt  test_file  timer.txt  timer_binaer
.github/workflows/: test_and_build.yaml
src/: hour_sheet.py  hour_sheet_cli.py  workday.py
src/cli/: hour_sheet_cli.py  hour_sheet_cli_utils.py  hour_sheet_utils.py
tests/: IO_test.py  add_dates_test.py  cli_test.py  conftest.py  statistics_test.py
tests/resources/: test_file  test_file.json  test_file.txt
